spring security 설정 추가
Signed-off-by: qoiol <hjjj1324@gmail.com>

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 //	runtimeOnly 'com.h2database:h2'
 //	implementation 'mysql:mysql-connector-java'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework.boot:spring-boot-starter-validation:3.3.6'
 
 
 
@@ -46,6 +47,15 @@ dependencies {
 
 	// https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc10
 	implementation 'com.oracle.database.jdbc:ojdbc10:19.26.0.0'
+
+
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-jackson
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-impl
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 }
 
 tasks.named('test') {
