--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
 spring.datasource.username=sys as sysdba
 spring.datasource.password=1234
+
+jwt.secret-key=spring-project.dawoon-application-2025.secret_key
+jwt.expired-time-ms=2592000000
