review paging +paging 코드 추가 +html 페이지 ui 추가 +리뷰 별점 표시 추가 +의존성 수정
Signed-off-by: qoiol <hjjj1324@gmail.com>

--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.datasource.password=1234
 
 jwt.secret-key=spring-project.dawoon-application-2025.secret_key
 jwt.expired-time-ms=2592000000
+
+page-info.page-size=5
+page-info.page-block-size=5
