jwt 토큰에 권한 정보 추가
Signed-off-by: qoiol <hjjj1324@gmail.com>

--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.username=sys as sysdba
 spring.datasource.password=1234
 
 jwt.secret-key=spring-project.dawoon-application-2025.secret_key
-jwt.expired-time-ms=2592000000
+jwt.expired-time-ms=60000
 
 page-info.page-size=5
 page-info.page-block-size=5
